# rbx-bnr-data

./: .gitattributes  .gitignore  README.md  environment.yml  recap_20260625.csv  test.csv  test2.csv  test3.csv
.github/workflows/: build-windows.yml
data/corpus_liste/: bnr_corpus.xlsx
doc/: documentation.md
documentation/: accueil.md
documentation/files/: glossaire.md  todo.md
ead_editor/: README.md  pyproject.toml  requirements.txt
ead_editor/ead_editor/: __init__.py  operations.py
ead_editor/ead_editor/ui/: __init__.py  app.py  batch_dialog.py  controlaccess_panel.py  dialogs.py  navigator.py
ead_editor/tests/: conftest.py  test_operations.py
results/corpus/: .~lock.med_aff_a_transferer.csv#  med_aff_a_transferer.csv  med_ima.csv  med_ima_a_transferer.csv  med_ms.csv  med_ms_a_transferer.csv  med_par.csv  med_par_a_transferer.csv  telechargement_20260619154711.csv  telechargement_20260619155102.csv
results/corpus_liste/: .~lock.suivi_corpus.xlsx#  .~lock.suivi_corpus_20260610.xlsx#  suivi_corpus.xlsx
results/dao/: dao_stats_ir_20260613.xlsx  dao_stats_ir_20260702.xlsx  liste_ir_statDao_20260430.xlsx
results/ead_cor/: test_origination.xml
results/ead_editor/: .gitignore
results/img/: .~lock.recap_global_20260630.csv#  recap_global_20260630.csv  recap_global_20260630_pivot.csv  recap_global_20260630_pivot.xlsx
results/ir/: .~lock.liste_instruments_recherche_20260521_transfert_mnesys.xlsx#  Liste_repository_2026-05-22.csv  liste_instruments_recherche_20260521.xlsx  (+1 more)
results/oai/: bnr_sets_20260430.csv  (+1 more)
scripts/: add_compress_estimates.py
(+1956 files in other folders)
