[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ead-editor-bnr"
version = "0.1.0"
description = "Éditeur graphique de fichiers EAD (numérisations dao et indexation controlaccess) pour la Bibliothèque numérique de Roubaix."
requires-python = ">=3.10"
dependencies = ["lxml>=5"]

[project.gui-scripts]
editeur-ead = "ead_editor.ui.app:main"

[tool.setuptools.packages.find]
include = ["ead_editor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
